--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
     "classnames": "^2.3.2",
+    "eslint-plugin-react": "^7.33.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
